--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -2,8 +2,60 @@
 
     @mixin clearfix;
 
+        &--gutters-small>div {
+            padding-right: 45px;
+        }
+
+        &--gutters>div {
+            padding-right: 65px;
+        }
+
+        &--gutters-large > div {
+            padding-right: 100px;
+        }
+
+
+
+    &--no-gutters-until-large > div {
+        padding-right: 0;
+        @mixin atLarge {
+            padding-right: 45px;
+        }
+    }
+
     &__b-margin-until-medium {
         margin-bottom: 1rem;
+    }
+
+    &--t-padding {
+        padding-top:80px;
+    }
+
+    @mixin atLarge {
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+            &--larger {
+                width: 37%;
+            }
+        }
+
+        &__b-margin-until-large {
+            margin-bottom: 0rem;
+        }
+
+        &__large-8 {
+            width: 66.66%;
+            float: left;
+            &--smaller {
+                width: 63%;
+            }
+        }
+
+        &__large-6 {
+            width: 50%;
+            float: left;
+        }
     }
 
     @mixin atMedium {
@@ -35,15 +87,26 @@
         }
 
 
-
-        &--gutters>div {
-            padding-right: 65px;
-        }
-
-        &--gutters-large>div {
-            padding-right: 100px;
-        }
     }
+
+        &--equal-height-at-medium {
+            @mixin atMedium {
+                display:flex;
+            }
+
+            & > div {
+                display: flex;
+            }
+        }
+
+        &--equal-height-at-large {
+            @mixin atLarge {
+                display: flex;
+            }
+            &>div {
+                display: flex;
+            }
+        }
 
 
 
