--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -11,6 +11,21 @@
         padding: 0;
     }
 
+    &--no-padding-until-medium {
+        padding: 0;
+
+        @mixin atMedium {
+            padding: 0 1.06rem;
+        }
+    }
+
+    &--no-padding-until-large {
+        padding: 0;
+        @mixin atLarge {
+            padding: 0 1.06rem;
+        }
+    }
+
     &--b-margin {
         margin-bottom: 1rem;
 
