--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,113 +1,124 @@
 .row {
 
-    @mixin clearfix;
+  @mixin clearfix;
 
-        &--gutters-small>div {
-            padding-right: 45px;
-        }
+  &--t-padding {
+    padding-top: 80px;
+  }
 
-        &--gutters>div {
-            padding-right: 65px;
-        }
+  &--gutters {
+    margin-right: -65px;
+  }
 
-        &--gutters-large > div {
-            padding-right: 100px;
-        }
+  &--gutters-large {
+    margin-right: -100px;
+  }
 
+  &--gutters-small {
+    margin-right: -45px;
+  }
 
+  &--gutters > div {
+    padding-right: 65px;
+  }
 
-    &--no-gutters-until-large > div {
-        padding-right: 0;
-        @mixin atLarge {
-            padding-right: 45px;
-        }
-    }
+  &--gutters-large > div {
+    padding-right: 100px;
+  }
+
+  &--gutters-small > div {
+    padding-right: 45px;
+  }
+
+  &__b-margin-until-medium {
+    margin-bottom: 1rem;
+  }
+
+  @mixin atMedium {
 
     &__b-margin-until-medium {
-        margin-bottom: 1rem;
+      margin-bottom: 0;
     }
 
-    &--t-padding {
-        padding-top:80px;
+    &__medium-4 {
+      float: left;
+      width: 33.33%;
     }
 
-    @mixin atLarge {
-        &__large-4 {
-            float: left;
-            width: 33.33%;
-            &--larger {
-                width: 37%;
-            }
-        }
-
-        &__b-margin-until-large {
-            margin-bottom: 0rem;
-        }
-
-        &__large-8 {
-            width: 66.66%;
-            float: left;
-            &--smaller {
-                width: 63%;
-            }
-        }
-
-        &__large-6 {
-            width: 50%;
-            float: left;
-        }
+    &__medium-4--larger {
+      width: 37%;
     }
 
+    &__medium-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__medium-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__medium-8--smaller {
+      width: 63%;
+    }
+
+  }
+
+  @mixin atLarge {
+
+    &__b-margin-until-large {
+      margin-bottom: 0;
+    }
+
+    &__large-4 {
+      float: left;
+      width: 33.33%;
+    }
+
+    &__large-4--larger {
+      width: 37%;
+    }
+
+    &__large-6 {
+      float: left;
+      width: 50%;
+    }
+
+    &__large-8 {
+      float: left;
+      width: 66.66%;
+    }
+
+    &__large-8--smaller {
+      width: 63%;
+    }
+
+  }
+  
+  /* Begin Equal Height Rules */
+  &--equal-height-at-medium {
     @mixin atMedium {
-        &__medium-4 {
-            float: left;
-            width: 33.33%;
-
-            &--larger {
-                width: 37%;
-            }
-        }
-
-        &__b-margin-until-medium {
-            margin-bottom: 0rem;
-        }
-
-        &__medium-8 {
-            width: 66.66%;
-            float: left;
-
-            &--smaller {
-                width: 63%;
-            }
-        }
-
-        &__medium-6 {
-            width: 50%;
-            float:left;
-        }
-
-
+      display: flex;
     }
 
-        &--equal-height-at-medium {
-            @mixin atMedium {
-                display:flex;
-            }
+    & > div {
+      float: none;
+      display: flex;
+    }
 
-            & > div {
-                display: flex;
-            }
-        }
+  }
 
-        &--equal-height-at-large {
-            @mixin atLarge {
-                display: flex;
-            }
-            &>div {
-                display: flex;
-            }
-        }
+  &--equal-height-at-large {
+    @mixin atLarge {
+      display: flex;
+    }
 
+    & > div {
+      float: none;
+      display: flex;
+    }
 
+  }
 
 }
