--- a/app/assets/styles/modules/_wrapper.css
+++ b/app/assets/styles/modules/_wrapper.css
@@ -1,37 +1,46 @@
 .wrapper {
-    padding: 0 1.06rem;
-    max-width:1236px;
-    margin:0 auto;
+  overflow: hidden;
+  padding-left: 18px;
+  padding-right: 18px;
+  max-width: 1236px;
+  margin-left: auto;
+  margin-right: auto;
 
-    &--medium {
-        max-width:980px;
+  &--medium {
+    max-width: 976px;
+  }
+
+  &--no-padding-until-medium {
+    padding-left: 0;
+    padding-right: 0;
+
+    @mixin atMedium {
+      padding-left: 18px;
+      padding-right: 18px;
     }
+  }
 
-    .wrapper {
-        padding: 0;
+  &--no-padding-until-large {
+    padding-left: 0;
+    padding-right: 0;
+
+    @mixin atLarge {
+      padding-left: 18px;
+      padding-right: 18px;
     }
+  }
 
-    &--no-padding-until-medium {
-        padding: 0;
+  .wrapper {
+    padding-left: 0;
+    padding-right: 0;
+  }
 
-        @mixin atMedium {
-            padding: 0 1.06rem;
-        }
+  &--b-margin {
+    margin-bottom: 1rem;
+
+    @mixin atSmall {
+      margin-bottom: 3.875rem;
     }
+  }
 
-    &--no-padding-until-large {
-        padding: 0;
-        @mixin atLarge {
-            padding: 0 1.06rem;
-        }
-    }
-
-    &--b-margin {
-        margin-bottom: 1rem;
-
-        @mixin atSmall {
-            margin-bottom: 3.875rem;
-        }
-        
-    }
 }
